# RapidOCR-API

./: .gitignore  README.md  demo.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: gen_whl_to_pypi_rapidocr_api.yml
core/: settings.py
docs/: doc_whl_rapidocr_api.md
rapidocr_api/: formatter.py  main.py  utils.py
rapidocr_api/api/: routes.py
rapidocr_api/core/: constants.py  settings.py
rapidocr_api/schemas/: ocr.py
rapidocr_api/services/: document.py  formatter.py  ocr.py  pdf_tasks.py  utils.py
tests/: test_formatter.py  test_main_formatting.py  test_main_pdf_tasks.py  test_pdf_markdown_fields.py  test_settings.py  test_utils.py
