[project]
name = "rapidocrapi"
version = "0.1.0"
description = "参考实现 https://rapidai.github.io/RapidOCRDocs/main/install_usage/rapidocr_api/usage/#_1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "pymupdf>=1.26.6",
    "python-multipart>=0.0.27",
    "rapidocr>=3.8.1",
    "requests>=2.33.1",
    "uvicorn[standard]>=0.46.0",
]


[tool.fastapi]
entrypoint = "rapidocr_api.main:app"

# 指定 extra 依赖
[project.optional-dependencies]
cpu = [
  "onnxruntime",
  "rapid-doc[cpu]"
]

gpu = [
  "onnxruntime-gpu",
  "rapid-doc[gpu]"
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "gpu" },
  ],
]

# PyPI
[[tool.uv.index]]
name = "internal-proxy"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

[[tool.uv.index]]
name = "huawei"
url = "https://mirrors.huaweicloud.com/repository/pypi/simple"
